# substrate-node-template

node/: Cargo.toml
node/src/: chain_spec.rs
pallets/exchange/: Cargo.toml
pallets/exchange/src/: lib.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock copy.rs  mock.rs  tests.rs
pallets/poe/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
