[package]
authors = ['']
description = ''
edition = '2018'
name = 'pallet-exchange'
repository = ''
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-runtime =  { default-features = false, version = '2.0.1' }
orml-traits =  { default-features = false, version = '0.3.0' }
orml-utilities = {default-features = false, version = '0.3.0'}

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'orml-traits/std',
    'orml-utilities/std',
]
